--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="text-container" id="text-container-id">
           <ul>
             <li><a href="#" class="overlay-link">Index</a></li>
-            <li><a href="/about.html" class="overlay-link">About</a></li>
-            <li><a href="/services.html" class="overlay-link">Services</a></li>
-            <li><a href="/contact.html" class="overlay-link">Contact</a></li>
+            <li><a href="about.html" class="overlay-link">About</a></li>
+            <li><a href="services.html" class="overlay-link">Services</a></li>
+            <li><a href="contact.html" class="overlay-link">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -32,7 +32,7 @@
     <div class="container showcase-container">
       <h1>Welcome to Nietzsche's Grotto</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex expedita, nulla beatae reiciendis minus, sapiente illo veritatis itaque voluptate aspernatur reprehenderit, sit ipsam numquam quod tenetur quam non sunt ad doloribus quisquam! Laborum provident dolore, quod expedita molestias delectus. Quis.</p>
-      <a href="/about.html" class="btn">Learn More</a>
+      <a href="about.html" class="btn">Learn More</a>
     </div>
   </header>
 </body>
